using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings : MonoBehaviour
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isDashing";
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string jump2 = "jump2";
    internal static string atk = "atk";
    internal static string airAtk = "airAtk";
    internal static string canMove = "canMove";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string isShooting = "isShooting";
    internal static string attackCooldown = "attackCooldown";
    internal static string trigger1 = "trigger1";
}
